--- a/angular.json
+++ b/angular.json
@@ -16,8 +16,7 @@
             "outputPath": "dist/ngrx-starter",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
+            "polyfills": ["zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
